@@ -1,11 +1,7 @@
 package edu.austral.ingsis;
 
 import edu.austral.ingsis.clifford.cli.CLI;
-import edu.austral.ingsis.clifford.filesystem.Directory;
-
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TestRunner implements FileSystemRunner{
   private CLI cli;
@@ -15,7 +11,6 @@ public class TestRunner implements FileSystemRunner{
 
   @Override
   public List<String> executeCommands(List<String> commands) {
-
-    return commands.stream().map(cli::executeCommand).collect(Collectors.toList());
+    return commands.stream().map(cli::executeCommand).toList();
   }
 }
